--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Shopping list</h1>
 	<div class="text">
-		<p><strong>Welcome to your own coutomizable Shopping list</strong><br>Add your items to the coustomizable list and get started!!!</p>
+		<p><strong>Welcome to your own customizable Shopping list</strong><br>Add your items to the customizable list and get started!!!</p>
 		<p>Note:<br>Click on items to mark them checked ✔<br>Press "Remove!" for removing the item from list</p>
 	</div>
 
